--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
                         <!-- Total Bance (USD) -->
                         <div class="totalBalance">
                               <div class="totalBal">
-                                    <p>Total Balance</p>
-                              </div>
-                              <div class="usd">
-                                    <p>(USD)</p>
+                                    <p>Total Balance <span>(USD)</span></p>
                               </div>
                         </div>
 
