--- a/loginindex.html
+++ b/loginindex.html
@@ -1,86 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>Home</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
       <link rel="stylesheet" href="loginindex.css">
 </head>
-<body>
-      <div id="loginIndexCoverPage">
 
-            <!-- Login Up Nav Bar starts here -->
-            <div class="loginUpNavBar">
-                  <div class="imageIconContainer">
-                        <a href="loginindexuser.html" class="imageIconHolder">
+<body>
+      <div id="indexMainCoverContainer">
+
+            <!-- Nav Bar start here -->
+            <div class="indexNavBar">
+
+                  <!-- User Logo Container -->
+                  <div class="navBarUserLogoContainer">
+                        <a href="#" class="userLogoHolder">
                               <i class="fa-solid fa-user"></i>
                         </a>
                   </div>
-                  <div class="notificationIconContainer">
-                        <a href="#" class="notificationIconHolder">
+
+                  <!-- Notification Container -->
+                  <div class="navBarNotificationLogoContainer">
+                        <a href="#" class="notificationLogoHolder">
                               <i class="fa-solid fa-headphones"></i>
                         </a>
                   </div>
-            </div>
-            <!-- Up Nav Bar ends here -->
-            
 
-            <!-- Login Main Body starts here -->
-            <div class="loginMainBody">
-                  <div class="updatesLogoBitcoinRegisterLoginContainer">
-
-                        <!-- Update available starts here -->
-                        <a href="#" class="updatesAvailableContainer">
-                              <div class="updatesAvailableIconContainer">
-                                    <div class="updatesAvailableIconHolder">
-                                          <h2>i</h2>
-                                    </div>
-                              </div>
-                              <div class="updatesAvailableWordsContainer">
-                                    <div class="updatesAvailableWordsHolder">
-                                          <h3>Updates available</h3>
-                                          <p>New version 6.97.0 v674 is ready to download</p>
-                                    </div>
-                              </div>
+                  <!-- Message Container -->
+                  <div class="navBarMessageLogoContainer">
+                        <a href="#" class="messageLogoHolder">
+                              <i class="fa-regular fa-envelope"></i>
                         </a>
-                        <!-- Update available ends here -->
+                  </div>
+            </div>
 
-                        <!-- R Logo starts here -->
-                        <div class="logoContainer">
-                              <div class="logoHolder"></div>
-                        </div>
-                        <!-- R Logo ends here -->
 
-                        <!-- Bitcoin to USD in few steps starts here -->
-                        <div class="bitcoinToUsdContainer">
-                              <div class="bitcoinToUsdHolder">
-                                    <h2>Bitcoin to USD in few steps</h2>
-                                    <p>Easy convert BTC to USD</p>
-                                    <p>with direct withdrawal to your bank</p>
+
+            <!-- Body start here -->
+            <div class="indexBody">
+
+                  <!-- Update available starts here -->
+                  <a href="#" class="updatesAvailableContainer">
+                        <div class="updatesAvailableIconContainer">
+                              <div class="updatesAvailableIconHolder">
+                                    <h2>i</h2>
                               </div>
                         </div>
-                        <!-- Bitcoin to USD in few ends starts here -->
+                        <div class="updatesAvailableWordsContainer">
+                              <div class="updatesAvailableWordsHolder">
+                                    <h3>Updates available</h3>
+                                    <p>New version 6.97.0 v674 is ready to download</p>
+                              </div>
+                        </div>
+                  </a>
 
-                        <!-- Register now-it's free starts here -->
-                        <div class="registerNowContainer">
-                              <a href="register.html" class="registerNowHolder">
-                                    <p>Register now - It's free</p>
+
+                  <!-- Account Dash-Board -->
+                  <div class="accountDashBoardContainer">
+                        <!-- Total Bance (USD) -->
+                        <div class="totalBalance">
+                              <div class="totalBal">
+                                    <p>Total Balance <span>(USD)</span></p>
+                              </div>
+                        </div>
+
+                        <!-- Amount In Numbers -->
+                        <div class="amountInNumbers">
+                              <!-- Number, Eye & Arrow -->
+                              <div class="numbersContainer">
+                                    <!-- Amount Value -->
+                                    <div class="number">
+                                          <p>2,000,000.00</p>
+                                    </div>
+                                    <!-- Eye -->
+                                    <div class="eye">
+                                          <i class="fa-solid fa-eye"></i>
+                                    </div>
+                                    <!-- Arrow -->
+                                    <div class="arrow">
+                                          <a href="#" class="arrowHolder">
+                                                <p>>></p>
+                                          </a>
+                                    </div>
+                              </div>
+                              <!-- Amount Volume -->
+                              <div class="amountVolumeContainer">
+                                    <p>20.87%</p>
+                              </div>
+                        </div>
+
+                        <!-- Deposit & Withdraw -->
+                        <div class="depositWithdraw">
+                              <a href="#" class="deposit">
+                                    <p>Deposit</p>
+                              </a>
+                              <a href="#" class="withdraw">
+                                    <p>Withdraw</p>
                               </a>
                         </div>
-                        <!-- Register now-it's free ends here -->
-
-                        <!-- Login starts here -->
-                        <div class="loginContainer">
-                              <a href="login.html" class="loginHolder">
-                                    <p>Login</p>
-                              </a>
-                        </div>
-                        <!-- Login ends here -->
                   </div>
+
 
                   <!-- Currency Logo, Names, Price & Volume starts here -->
                   <div class="coinsChartsPricesContainer">
@@ -224,7 +249,8 @@
                               <a href="#" class="theDollarToNairaBlackMarket">
                                     <div class="theDollarToNairaBlackMarketWords">
                                           <p class="date">2024/03/10</p>
-                                          <p class="words">The Dollar to Naira <br> Black Market <br> Implications for ...</p>
+                                          <p class="words">The Dollar to Naira <br> Black Market <br> Implications for
+                                                ...</p>
                                     </div>
                                     <div class="theDollarToNairaBlackMarketImages"></div>
                               </a>
@@ -242,7 +268,8 @@
                               <a href="#" class="decodingCryptoTheFutureOfBitcoin">
                                     <div class="decodingCryptoTheFutureOfBitcoinWords">
                                           <p class="date">2024/03/10</p>
-                                          <p class="words">Decoding Crypto: <br> The future of <br> Bitcoin Tradingn in...</p>
+                                          <p class="words">Decoding Crypto: <br> The future of <br> Bitcoin Tradingn
+                                                in...</p>
                                     </div>
                                     <div class="decodingCryptoTheFutureOfBitcoinImages"></div>
                               </a>
@@ -284,63 +311,66 @@
                   <!-- Learn, Explore, News Update ends here -->
             </div>
             <!-- Login Main Body ends here -->
+      </div>
 
 
 
-            <!-- Login Bottom Nav Bar starts here -->
-            <div class="loginBottomNavBar">
 
-                  <!-- HOME start -->
-                  <div class="loginHome">
-                        <a href="#" class="logoHomeContainer">
-                              <div class="loginHomeLogoHolder">
-                                    <i class="fa-solid fa-house"></i>
-                              </div>
-                              <p>Home</p>
-                        </a>
-                  </div>
+      <!-- Footer start here -->
+      <div class="indexFooter">
 
-                  <!-- HISTORY start -->
-                  <div class="loginHistory">
-                        <a href="#" class="loginHistoryContainer">
-                              <div class="loginHistoryLogoHolder">
-                                    <i class="fa-regular fa-folder"></i>
-                              </div>
-                              <p>History</p>
-                        </a>
-                  </div>
-
-                  <!-- TRADES start -->
-                  <div class="loginTrades">
-                        <a href="#" class="loginTradesContainer">
-                              <div class="loginTradesLogoHolder">
-                                    <i class="fa-solid fa-repeat"></i>
-                              </div>
-                              <p>Trades</p>
-                        </a>
-                  </div>
-
-                  <!-- WALLET start -->
-                  <div class="loginWallet">
-                        <a href="#" class="loginWalletContainer">
-                              <div class="loginWalletLogoHolder">
-                                    <i class="fa-solid fa-wallet"></i>
-                              </div>
-                              <p>Wallet</p>
-                        </a>
-                  </div>
-
-                  <!-- MORE start -->
-                  <div class="loginMore">
-                        <a href="#" class="loginMoreContainer">
-                              <div class="loginMoreLogoHolder">
-                                    <i class="fa-regular fa-rectangle-list"></i>
-                              </div>
-                              <p>More</p>
-                        </a>
-                  </div>
+            <!-- HOME start -->
+            <div class="loginHome">
+                  <a href="#" class="logoHomeContainer">
+                        <div class="loginHomeLogoHolder">
+                              <i class="fa-solid fa-house"></i>
+                        </div>
+                        <p>Home</p>
+                  </a>
             </div>
-            <!-- Login Bottom Nav Bar ends here -->
+
+            <!-- HISTORY start -->
+            <div class="loginHistory">
+                  <a href="#" class="loginHistoryContainer">
+                        <div class="loginHistoryLogoHolder">
+                              <i class="fa-regular fa-folder"></i>
+                        </div>
+                        <p>History</p>
+                  </a>
+            </div>
+
+            <!-- TRADES start -->
+            <div class="loginTrades">
+                  <a href="#" class="loginTradesContainer">
+                        <div class="loginTradesLogoHolder">
+                              <i class="fa-solid fa-repeat"></i>
+                        </div>
+                        <p>Trades</p>
+                  </a>
+            </div>
+
+            <!-- WALLET start -->
+            <div class="loginWallet">
+                  <a href="#" class="loginWalletContainer">
+                        <div class="loginWalletLogoHolder">
+                              <i class="fa-solid fa-wallet"></i>
+                        </div>
+                        <p>Wallet</p>
+                  </a>
+            </div>
+
+            <!-- MORE start -->
+            <div class="loginMore">
+                  <a href="#" class="loginMoreContainer">
+                        <div class="loginMoreLogoHolder">
+                              <i class="fa-regular fa-rectangle-list"></i>
+                        </div>
+                        <p>More</p>
+                  </a>
+            </div>
+      </div>
+      <!-- Login Bottom Nav Bar ends here -->
       </div>
 </body>
+
 </html>
